# bookstore

./: .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
books/: models.py  serializers.py  test.py  tests.py  urls.py  views.py  viewsets.py
books/migrations/: 0001_initial.py
books/tests/: tests_viewsets.py
bookstore/: settings.py  urls.py  views.py
