[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Book Store APP"
authors = ["Nikooooh <nicolastrevis@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.13"

django = "^5.0.6"
djangorestframework = "^3.14.0"  # Adicionando a dependência do Django REST framework
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
