[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Book Store APP"
authors = ["Nikooooh <nicolastrevis@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"  # Atualizado para especificar uma versão compatível do Python

django = "^3.2"  # Atualizado para a versão mais recente do Django 3.x
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.9"
gitpython = "^3.1.43"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
